W 15397829.carbonj read write pool no msgpack (#868)
* W-15397829: Disable staging store related beans for readonly and add latency histogram for metrics being put into DB